--- a/core/themes/bartik/css/style.css
+++ b/core/themes/bartik/css/style.css
@@ -1381,19 +1381,6 @@ input.form-button-disabled:active,
   color: #717171;
 }
 
-/* Animated throbber */
-.js input.form-autocomplete {
-  background-position: 100% 4px; /* LTR */
-}
-[dir="rtl"] .js input.form-autocomplete {
-  background-position: 1% 4px;
-}
-.js input.throbbing {
-  background-position: 100% -16px; /* LTR */
-}
-[dir="rtl"] .js input.throbbing {
-  background-position: 1% -16px;
-}
 /* Comment form */
 .comment-form label {
   float: left; /* LTR */
